Estructura basica y movimiento

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>23</maven.compiler.release>
-        <exec.mainClass>ingsw.marianito.Marianito</exec.mainClass>
+        <exec.mainClass>ingsw.marianito.Main</exec.mainClass>
     </properties>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+    </dependencies>
 </project>
